# twitterBot

./: .gitignore  README.md  bot.sh  creds.py  last_tweet.txt  legacy.py  main.py  requirements.txt  setup.cfg  setup.py  test.py  tests.py  tokens.py  tweet.py
src/: utils.py
