[metadata]
name = twitter-notify
version = 0.0.1
author = Redouane Elkaboussi
author_email = elkaboussi@pm.me
description = A simple twitter notification script
long_description = file: README.md
long_description_content_type = text/markdown
; url = to add later
project_urls =
    Bug Tracker = ; to add later
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

